test/typeerrors/Edinburgh/Ex10.hs
module Ex10 where

f5 x = if x > 3 then x else 1.1
